# BeanBudgetBuilder

./: .gitignore  Cargo.toml  README.md  index.html  script.js  settings.toml  styles.css
src/: account_data.rs  budget_data.rs  endpoints.rs  main.rs
src/data/: account.rs  budget.rs  expendature.rs  mod.rs
src/endpoints/: accounts.rs  calendar.rs  mod.rs  standard.rs  updates.rs
templates/: add_expendature.html  calendar.html  component_remove_expendature.html  create_account.html  error.html  index.html  landing.html  login.html  update_account.html
